[package]
name = "casual-bookkepper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
colored = "2.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
